--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,4 +129,14 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
+
+  /* Hide number input spinner buttons */
+  .no-spinner::-webkit-inner-spin-button,
+  .no-spinner::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  .no-spinner {
+    -moz-appearance: textfield;
+  }
 }
