--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,8 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
+  --color-ketcher-canvas: var(--ketcher-canvas);
 }
 
 :root {
@@ -76,6 +78,8 @@
   --sidebar-ring: oklch(0.704 0.04 256.788);
   --background: oklch(1 0 0);
   --foreground: oklch(0.129 0.042 264.695);
+
+  --ketcher-canvas: #fcfcfc;
 }
 
 .dark {
